@@ -17,4 +17,13 @@ ENV PORT=8080 \
     BOT_STATE_FILE=/app/data/state.json \
     BOT_CATALOG_FILE=/app/data/catalog.json
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+ENTRYPOINT ["java", \
+  "-Xmx128m", \
+  "-Xms64m", \
+  "-Xss256k", \
+  "-XX:+UseSerialGC", \
+  "-XX:MaxMetaspaceSize=48m", \
+  "-XX:+TieredCompilation", \
+  "-XX:TieredStopAtLevel=1", \
+  "-Xverify:none", \
+  "-jar", "/app/app.jar"]
